# mbedtls_playground

./: .gitignore  CMakeLists.txt  cert_playground.c  ecdh_playground.c  ecdsa_playground.c  main.c
certificates/: ec_device.crt  ec_device.crt.hexarr  ec_device.csr  ec_device.key  ec_device.key.hexarr  ec_device_pub.key  ec_device_pub.key.hexarr  ec_oem.crt  ec_oem.crt.hexarr  ec_oem.key  ec_oem.key.hexarr  ec_oem.srl  ec_oem_pub.key  ec_oem_pub.key.hexarr  ec_root.crt  ec_root.crt.hexarr  ec_root.key  ec_root.key.hexarr  ec_root.srl  run.bat  run_generate_ec_certificates.bat
keys/: aes128_key_array.txt  aes192_key_array.txt  aes256_key_array.txt  aes_iv_array.txt  data_encrypted_aes128_array.txt  data_encrypted_aes128_hash_digest_array.txt  data_encrypted_aes192_array.txt  data_encrypted_aes192_hash_digest_array.txt  data_encrypted_aes256_array.txt  data_encrypted_aes256_hash_digest_array.txt  data_raw_hash_digest_array.txt  data_raw_input_array.txt  data_raw_input_str.txt  ecc_public_key_compressed_array.txt  ecc_public_key_uncompressed_array.txt  private.ec.key  private.ec.oneline.key  public.ec.key  public.ec.oneline.key  signature_der_array.txt  signature_p1363_array.txt
mbedtls/configs/: config-tfm.h
mbedtls/configs/ext/: tfm_mbedcrypto_config_profile_medium.h
mbedtls/include/mbedtls/: asn1.h  ecp.h  entropy.h  mbedtls_config.h  pk.h  x509_crt.h
scripts/: convert_certificates_to_hex.py  gen_keys.py
